[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 36.2139
margin_top = 29.688
margin_right = 131.214
margin_bottom = 62.688
rect_pivot_offset = Vector2( 67.7226, 40.0722 )
text = "ADD Stuff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 34.9816
margin_top = 82.5864
margin_right = 129.982
margin_bottom = 115.586
rect_pivot_offset = Vector2( 67.7226, 40.0722 )
text = "OPEN Stuff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -203.0
margin_right = 211.5
margin_bottom = 203.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 27.8712
margin_top = 13.6512
margin_right = 99.8712
margin_bottom = 27.6512
text = "WUPINLAN"

[node name="items" type="GridContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.5
margin_top = -169.5
margin_right = 205.5
margin_bottom = 170.5
grow_horizontal = 0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item1" type="PanelContainer" parent="Panel/items"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item2" type="PanelContainer" parent="Panel/items"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item3" type="PanelContainer" parent="Panel/items"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item4" type="PanelContainer" parent="Panel/items"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item5" type="PanelContainer" parent="Panel/items"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item6" type="PanelContainer" parent="Panel/items"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item7" type="PanelContainer" parent="Panel/items"]
margin_top = 70.0
margin_right = 60.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item8" type="PanelContainer" parent="Panel/items"]
margin_left = 70.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item9" type="PanelContainer" parent="Panel/items"]
margin_left = 140.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item10" type="PanelContainer" parent="Panel/items"]
margin_left = 210.0
margin_top = 70.0
margin_right = 270.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item11" type="PanelContainer" parent="Panel/items"]
margin_left = 280.0
margin_top = 70.0
margin_right = 340.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item12" type="PanelContainer" parent="Panel/items"]
margin_left = 350.0
margin_top = 70.0
margin_right = 410.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item13" type="PanelContainer" parent="Panel/items"]
margin_top = 140.0
margin_right = 60.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item14" type="PanelContainer" parent="Panel/items"]
margin_left = 70.0
margin_top = 140.0
margin_right = 130.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item15" type="PanelContainer" parent="Panel/items"]
margin_left = 140.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item16" type="PanelContainer" parent="Panel/items"]
margin_left = 210.0
margin_top = 140.0
margin_right = 270.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item17" type="PanelContainer" parent="Panel/items"]
margin_left = 280.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item18" type="PanelContainer" parent="Panel/items"]
margin_left = 350.0
margin_top = 140.0
margin_right = 410.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item19" type="PanelContainer" parent="Panel/items"]
margin_top = 210.0
margin_right = 60.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item20" type="PanelContainer" parent="Panel/items"]
margin_left = 70.0
margin_top = 210.0
margin_right = 130.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item21" type="PanelContainer" parent="Panel/items"]
margin_left = 140.0
margin_top = 210.0
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item22" type="PanelContainer" parent="Panel/items"]
margin_left = 210.0
margin_top = 210.0
margin_right = 270.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item23" type="PanelContainer" parent="Panel/items"]
margin_left = 280.0
margin_top = 210.0
margin_right = 340.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item24" type="PanelContainer" parent="Panel/items"]
margin_left = 350.0
margin_top = 210.0
margin_right = 410.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item25" type="PanelContainer" parent="Panel/items"]
margin_top = 280.0
margin_right = 60.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item26" type="PanelContainer" parent="Panel/items"]
margin_left = 70.0
margin_top = 280.0
margin_right = 130.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item27" type="PanelContainer" parent="Panel/items"]
margin_left = 140.0
margin_top = 280.0
margin_right = 200.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item28" type="PanelContainer" parent="Panel/items"]
margin_left = 210.0
margin_top = 280.0
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item29" type="PanelContainer" parent="Panel/items"]
margin_left = 280.0
margin_top = 280.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item30" type="PanelContainer" parent="Panel/items"]
margin_left = 350.0
margin_top = 280.0
margin_right = 410.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -206.0
margin_top = -68.0
margin_right = 206.0

[node name="user" type="GridContainer" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -30.0
margin_right = 205.0
margin_bottom = 30.0
grow_horizontal = 0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="item1" type="PanelContainer" parent="Panel2/user"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item2" type="PanelContainer" parent="Panel2/user"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item3" type="PanelContainer" parent="Panel2/user"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item4" type="PanelContainer" parent="Panel2/user"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item5" type="PanelContainer" parent="Panel2/user"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )

[node name="item6" type="PanelContainer" parent="Panel2/user"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
